# support-ticket-router

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  requirements.txt
router/: __init__.py  __main__.py  audit.py  cli.py  clock.py  config.py  escalation.py  ingest.py  kb.py  llm.py  models.py  pipeline.py  resolve.py  store.py  triage.py
sample_data/: emails.json  kb_articles.json  slack.json
tests/: conftest.py  helpers.py  test_escalation.py  test_ingest.py  test_pipeline.py  test_resolve.py  test_triage.py
