[project]
name = "support-ticket-router"
version = "0.1.0"
description = "Agentic support automation: triage, ticketing, KB auto-resolution, and SLA escalation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "schuligan" }]
dependencies = ["pydantic>=2.0", "rich>=13.0"]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
router = "router.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
